--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
       <div class="dice">
         <p>Player 2</p>
         <img class="img2" src="./images/dice6.png">
+        
       </div>
-
+      <button id="refreshButton">Refresh</button>
     </div>
-
+    
 <script src="style.js"></script>
   </body>
 
   <footer>
+   
     www .🎲 Shubham Kumar 🎲 .com
   </footer>
 </html>
