--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img class="img2" src="./images/dice6.png">
         
       </div>
-      <button id="refreshButton">Refresh</button>
+      <button id="refreshButton">Play Again !</button>
     </div>
     
 <script src="style.js"></script>
